libycp/testsuite/tests/scope/Define.ycp
{
    define integer inc (integer i)
    {
	return i + 1;
    }

    return 1;
}

{
    define integer plus (integer i, integer j)
    {
	return i + j;
    }

    return 2;
}

{
    define integer fac (integer i)
    {
	if (i < 2)
	    return 1;
	return i * (fac (i-1));
    }

    return 2;
}


{
    // error
    define integer plus (integer plus)
    {
	return i;
    }

    return 2;
}
